# rust-axum-email-server

./: .env.example  Cargo.toml  LICENSE  README.md
src/: main.rs
